--- a/src/content/posts/forgotten-realms/beregost.mdx
+++ b/src/content/posts/forgotten-realms/beregost.mdx
@@ -3,7 +3,8 @@ title: "Берегост"
 description: "Берегост"
 date: "2018-06-18"
 tags: 
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - Лига Авантюристов
 ---
 
