--- a/src/content/posts/forgotten-realms/chelovecheskie-yazyki-alfavity-i-frazy-zabytyh-korolevstv.mdx
+++ b/src/content/posts/forgotten-realms/chelovecheskie-yazyki-alfavity-i-frazy-zabytyh-korolevstv.mdx
@@ -3,7 +3,8 @@ title: "Человеческие языки, алфавиты и фразы «З
 description: "Человеческие языки, алфавиты и фразы «Забытых Королевств»"
 date: "2018-11-13"
 tags:
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - Языки
 ---
 
