--- a/src/content/posts/forgotten-realms/cormyr-1493-1.mdx
+++ b/src/content/posts/forgotten-realms/cormyr-1493-1.mdx
@@ -4,6 +4,8 @@ description: Описание Кормира в 1493 ЛД
 date: '2021-04-17'
 tags:
   - Кормир
+  - "Забытые Королевства"
+  - "Forgotten Realms"
 ---
 
 В этой серии материалов я буду рассказывать о своей попытке экстраполировать Кормир - из последнего его опубликованного состояния (т.е. игромеханическая составляющая 1479 г.ЛД + описание событий из литературы - вплоть до 1486 г.ЛД).
