--- a/src/content/posts/forgotten-realms/daggerdale-lordless-country-today.mdx
+++ b/src/content/posts/forgotten-realms/daggerdale-lordless-country-today.mdx
@@ -4,7 +4,8 @@ description: перевод рассказа Эда Гринвуда про Да
 date: 2024-06-09
 tags:
   - перевод
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - Даггердейл
   - Эд Гринвуд
 author: Ed Greenwood
