--- a/src/content/posts/forgotten-realms/dengi-korolevstv.mdx
+++ b/src/content/posts/forgotten-realms/dengi-korolevstv.mdx
@@ -5,6 +5,7 @@ date: "2016-04-21"
 tags: 
   - "Деньги"
   - "Забытые Королевства"
+  - "Forgotten Realms"
 ---
 
 Практически у любого крупного государства Фаэруна есть собственная валюта - монеты, которые чеканятся на территории государства, представляют собой и его влияние, и материальное богатство. Большинство монет из чистого металла и стандартного веса принимаются как средство оплаты по всему континенту по номинальной стоимости, хотя не каждая страна или город-государство чеканит монеты всех номиналов.
