--- a/src/content/posts/forgotten-realms/dobro-i-zlo-na-faerune.mdx
+++ b/src/content/posts/forgotten-realms/dobro-i-zlo-na-faerune.mdx
@@ -6,8 +6,8 @@ date: "2018-03-13"
 tags: 
   - "adventurers-league"
   - "homebrew"
-  - "forgottenrealms"
-  - "forgotten-realms"
+  - "Забытые Королевства"
+  - "Forgotten Realms"
 ---
 
 Добро и зло на Фаэруне
