--- a/src/content/posts/forgotten-realms/drow-mechanicals.mdx
+++ b/src/content/posts/forgotten-realms/drow-mechanicals.mdx
@@ -3,7 +3,8 @@ title: 'ЧАСТО УПУСКАЕМЫЕ ИЗ ВИДУ: МЕХАНИЗМЫ ДРО
 description: ПЕРЕВОД рассказа Эда Гринвуда про механизмы дроу
 date: 2024-05-28
 tags:
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - Фаэрун
   - перевод
   - Эд Гринвуд
