--- a/src/content/posts/forgotten-realms/ed-greenwood-about-canon-in-forgotten-realms.mdx
+++ b/src/content/posts/forgotten-realms/ed-greenwood-about-canon-in-forgotten-realms.mdx
@@ -3,7 +3,8 @@ title: "Канон Forgotten Realms и Эд Гринвуд"
 description: Эд Гринвуд про канон в Забытых Королевствах и его условия контракта с TSR (WoTC)
 date: "2023-11-04"
 tags: 
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - Эд Гринвуд
   - Канон
 author: Ed Greenwood
