--- a/src/content/posts/forgotten-realms/eldret-veluutra.mdx
+++ b/src/content/posts/forgotten-realms/eldret-veluutra.mdx
@@ -4,10 +4,10 @@ title: "Элдрет Велуутра"
 description: "Элдрет Велуутра"
 date: "2016-04-06"
 tags: 
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - "homebrew"
-  - "forgottenrealms"
   - "5e"
-  - "forgotten-realms"
   - "translate"
 ---
 
