--- a/src/content/posts/forgotten-realms/flan.mdx
+++ b/src/content/posts/forgotten-realms/flan.mdx
@@ -7,7 +7,8 @@ tags:
   - Флан
   - 1 сезон
   - Лунное Море
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
 ---
 
 ![](/images/phlan1479.png)
