--- a/src/content/posts/forgotten-realms/hillsfar.mdx
+++ b/src/content/posts/forgotten-realms/hillsfar.mdx
@@ -8,7 +8,8 @@ categories:
   - "forgottenrealms"
   - "setting"
 tags: 
-  - "forgotten-realms"
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - "hillsfar"
   - "season-3"
 ---
