--- a/src/content/posts/forgotten-realms/ilmater.mdx
+++ b/src/content/posts/forgotten-realms/ilmater.mdx
@@ -3,7 +3,9 @@ title: "Илматер"
 description: "Илматер"
 date: "2018-07-20"
 tags: 
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
+
   - Илматер
 ---
 
