--- a/src/content/posts/forgotten-realms/lunnoe-more-moonsea.mdx
+++ b/src/content/posts/forgotten-realms/lunnoe-more-moonsea.mdx
@@ -4,6 +4,9 @@ title: "ЛУННОЕ МОРЕ - MOONSEA"
 description: "ЛУННОЕ МОРЕ - MOONSEA"
 date: "2018-03-13"
 tags: 
+  - "Забытые Королевства"
+  - "Forgotten Realms"
+
   - "homebrew"
 ---
 
