--- a/src/content/posts/forgotten-realms/medicina-na-faerune.mdx
+++ b/src/content/posts/forgotten-realms/medicina-na-faerune.mdx
@@ -8,7 +8,9 @@ categories:
   - "homebrew"
   - "forgottenrealms"
 tags: 
-  - "forgotten-realms"
+  - "Забытые Королевства"
+  - "Forgotten Realms"
+
 ---
 
 Хотя божественные целители на большей части Фаэруна достаточно распространены, их весьма мало во многих приграничных областях и в бедных районах большинства крупных городов. Также во многих общинах все еще ценится знание немагических, медицинских альтернатив магического лечения. Медицинские знания (представленные с очки зрения игры навыком Излечения) широко варьируются по всему Фаэруну. Зачастую выше всего они в общинах халфлингов и гномов, поскольку те, кто рядом с людьми, обычно живут так же, как и людские общины. Известны органы всех гуманоидных рас, плюс общее функционирование тела (включая шок и что с ним делать), как обращаться с кровью и как важна чистота ран. На Фаэруне почти любой понимает (Медицина СЛ 5), что больное или раненое существо нуждаются в отдыхе, должно быть укрыто одеялом или оберегаться от прямого солнечного света, и что перемещение или грубое обращение может нанечти еще больший вред. Большинство дает больным или раненым много пить (даже в случаях внутренних ран). Обычно используются носилки, щины и волокуши. Когда носилок не найти, обычно срубают стволы деревьев и несут раненых на плчах двух сильных носильщиков. Многие опытны в аккуратном зашивании плоти, пирсинге (особенно среди гоблиноидов) и использовании пламени или алкоголя (разумеется, по отдельности) для предотвращения заражения, которые в этом деле обычны (в настоящее время в Сердцеземье не модно использовать пирсинг на лице, кроме ноздрей и мочек ушей). Используется и прижигание, так что рубцы достаточно обычны. Широко используются травяное болеутоляющее (обычно жидкости, которые "варятся" и пьянят, но также и жидкости для обработки ран), особенно перед "зашиванием".
