--- a/src/content/posts/forgotten-realms/voprosy-i-otvety-eda-grinvuda-noyabr-2018-22.mdx
+++ b/src/content/posts/forgotten-realms/voprosy-i-otvety-eda-grinvuda-noyabr-2018-22.mdx
@@ -3,7 +3,8 @@ title: "Вопросы и ответы Эда Гринвуда. Ноябрь 201
 description: "Вопросы и ответы Эда Гринвуда. Ноябрь 2018. 2/2."
 date: "2018-12-30"
 tags: 
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - перевод
   - Эд Гринвуд
   - Ed Greenwood
