--- a/src/content/posts/forgotten-realms/zhentarim.mdx
+++ b/src/content/posts/forgotten-realms/zhentarim.mdx
@@ -3,7 +3,8 @@ title: Зентарим
 description: Описание фракции Зентарим
 date: 2024-03-13T15:12:13Z
 tags:
-  - Forgotten Realms
+  - "Забытые Королевства"
+  - "Forgotten Realms"
   - Организации
   - Зентарим
   - D&D 5e
