--- a/src/content/posts/forgotten-realms/flan-i-ego-okrestnosti.mdx
+++ b/src/content/posts/forgotten-realms/flan-i-ego-okrestnosti.mdx
@@ -7,7 +7,8 @@ tags:
   - Флан
   - 1 сезон
   - Лунное Море
-  - Забытые Королевства
+  - "Забытые Королевства"
+  - "Forgotten Realms"
 ---
 
 ## ПРИМЕЧАТЕЛЬНЫЕ МЕСТА ФЛАНА
