--- a/src/content/posts/forgotten-realms/frakcii.mdx
+++ b/src/content/posts/forgotten-realms/frakcii.mdx
@@ -5,9 +5,9 @@ description: "Фракции"
 date: "2016-03-25"
 tags: 
   - "homebrew"
-  - "forgottenrealms"
   - "5e"
-  - "forgotten-realms"
+  - "Забытые Королевства"
+  - "Forgotten Realms"
 ---
 
 Пять фракций приобрели широкую известность в Забытых Королевствах. Они ищут способы осуществления своих собственных целей, одновременно с этим противостоя разрушительным силам, грозящих простому люду Фаэруна. У каждой фракции есть свои побуждения, цели и философия. Некоторые из них более склонны к подвигам по сравнению с другими, однако все они объединяются в тяжелые для всего мира времена, чтобы противостоять угрозам его существования.
