--- a/src/content/posts/articles/using-mdx.mdx
+++ b/src/content/posts/articles/using-mdx.mdx
@@ -220,10 +220,10 @@ import Creature from '~components/Creature.astro';
 ### Видео
 
 ```mdx
-<Youtube href="https://www.youtube.com/embed/ilwKsgFolGA?si=SxL0tfe6NQyneXZM" title="Обзор Tales of Valiant" />
+<Youtube href="https://www.youtube.com/embed/ilwKsgFolGA" title="Обзор Tales of Valiant" />
 ```
 
-<Youtube href="https://www.youtube.com/embed/ilwKsgFolGA?si=SxL0tfe6NQyneXZM" title="Обзор Tales of Valiant" />
+<Youtube href="https://www.youtube.com/embed/ilwKsgFolGA" title="Обзор Tales of Valiant" />
 
 ### Стих
 
