--- a/src/content/posts/forgotten-realms/ed-says-secret-societies.mdx
+++ b/src/content/posts/forgotten-realms/ed-says-secret-societies.mdx
@@ -1,6 +1,6 @@
 ---
 title: Эд говорит- Тайные общества
-description: example
+description: Перевод статьи Эда Гринвуда про тайные сообщества в Забытых Королествах
 date: 2024-07-09 
 tags:
   - Ed Greenwood
