--- a/src/content/posts/forgotten-realms/ed-says-geography.mdx
+++ b/src/content/posts/forgotten-realms/ed-says-geography.mdx
@@ -1,6 +1,6 @@
 ---
 title: Эд говорит - География
-description: example
+description: Перевод статьи Эда Гринвуда про географию Забытых Королеств
 date: 2024-07-09 
 tags:
   - Ed Greenwood
