--- a/src/content/posts/forgotten-realms/ed-says-magic.mdx
+++ b/src/content/posts/forgotten-realms/ed-says-magic.mdx
@@ -1,6 +1,6 @@
 ---
 title: Эд говорит - А, волшебство.
-description: example
+description: Перевод статьи Эда Гринвуда про магию в Забытых Королеств
 date: 2024-07-09 
 tags:
   - Ed Greenwood
