--- a/src/content/posts/forgotten-realms/only-the-insane-believed-there-were-no-gods-ed-greenwood-speaks-of-religion-and-belief-in-forgotten-realms.mdx
+++ b/src/content/posts/forgotten-realms/only-the-insane-believed-there-were-no-gods-ed-greenwood-speaks-of-religion-and-belief-in-forgotten-realms.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Только безумцы верили, что богов нет: Эд Гринвуд рассказывает о религии и вере в Forgotten Realms'
-description: Перевод синтервью Гринвуда про создание религий в Забытых Королевствах
+description: Перевод интервью Гринвуда про создание религий в Забытых Королевствах
 date: 2024-07-09 
 tags:
   - Ed Greenwood
