--- a/src/content/posts/cored20rpg/exploration-knacks.mdx
+++ b/src/content/posts/cored20rpg/exploration-knacks.mdx
@@ -146,7 +146,8 @@ tags:
 
 - часть информации, которая поможет вам в ваших начинаниях до конца следующего длинного отдыха,
 - либо: как будет развиваться то или иное действие до конца вашего следующего длинного отдыха. Бросьте к20. До конца следующего длинного отдыха вы можете заменить любой бросок, сделанный существом, которое вы можете видеть в радиусе 30 футов от вас, результатом этого броска к20. Мастер сообщает вам, какое преимущество будет доступно, когда вы закончите длинный отдых.
-- **СОХРАНЕНИЕ.** Ваша связь с более великой сущностью позволяет вам чувствовать яд или болезнь в еде, напитках или других предметах потребления. Чтобы почувствовать эту порчу, вы должны иметь прямой контакт с ними или их контейнером.
+  
+**СОХРАНЕНИЕ.** Ваша связь с более великой сущностью позволяет вам чувствовать яд или болезнь в еде, напитках или других предметах потребления. Чтобы почувствовать эту порчу, вы должны иметь прямой контакт с ними или их контейнером.
 
 **ПРАВЕДНЫЙ ПУТЬ.** Божественная интуиция ведет вас по запутанным тропинкам построек или населенных пунктов без путаницы. Раз в день вы можете выбрать путь Праведника на 1 час. Идя по Пути Праведника, вы знаете, когда враги находятся в радиусе 60 футов от вас, и понимаете, можно ли обойти их, отступая назад или выбирая альтернативные маршруты. Вы также можете использовать действие, чтобы почувствовать наличие ловушек в радиусе 30 футов, но не их расположение и характер.
 
@@ -196,19 +197,32 @@ tags:
 
 ## Паладин
 
-ДАРОВАННОЕ ПОНИМАНИЕ. При попытке понять язык, которым вы не владеете (разговорный или письменный), вы можете сделать проверку КС 15 на Мудрость (Проницательность), чтобы понять основную мысль. Если язык считается забытым, вы делаете бросок с помехой. Вы можете сделать это несколько раз, равных вашему модификатору мудрости, и восстановить потраченные силы после завершения длинного отдыха.
-БОЖЕСТВО ЗДОРОВЬЯ. Вы невосприимчивы к болезням и имеете преимущество при спасбросках на устойчивость к состоянию отравления.
-БОЖЕСТВЕННОЕ ЗРЕНИЕ. Вы получаете способность "Темное зрение". Вы можете видеть в тусклом свете в радиусе 60 футов от вас, как если бы это был яркий свет, а в темноте - как если бы это был тусклый свет. Кроме того, у вас всегда готово заклинание невидимости, и вы можете использовать эту способность раз в длинный отдых, чтобы сотворить его, не тратя ячейку заклинания.
+**ДАРОВАННОЕ ПОНИМАНИЕ.** При попытке понять язык, которым вы не владеете (разговорный или письменный), вы можете сделать проверку КС 15 на Мудрость (Проницательность), чтобы понять основную мысль. Если язык считается забытым, вы делаете бросок с помехой. Вы можете сделать это несколько раз, равных вашему модификатору мудрости, и восстановить потраченные силы после завершения длинного отдыха.
+
+**БОЖЕСТВО ЗДОРОВЬЯ.** Вы невосприимчивы к болезням и имеете преимущество при спасбросках на устойчивость к состоянию отравления.
+
+**БОЖЕСТВЕННОЕ ЗРЕНИЕ.** Вы получаете способность "Темное зрение". Вы можете видеть в тусклом свете в радиусе 60 футов от вас, как если бы это был яркий свет, а в темноте - как если бы это был тусклый свет. Кроме того, у вас всегда готово заклинание невидимости, и вы можете использовать эту способность раз в длинный отдых, чтобы сотворить его, не тратя ячейку заклинания.
+
 ДЕЛАТЬ БЕЗ. Ваша связь с божеством и многолетние тренировки позволяют вам прожить без питания в течение нескольких дней, равных вашему модификатору харизмы, не испытывая никаких негативных последствий.
-ЭКЗЕМПЛЯР. Вы получаете бонус 1к4 при проверках на акробатику и атлетику при лазании, прыжках, беге и плавании. Когда ваша группа выполняет групповую проверку акробатики или атлетики, вы можете применить результаты броска к себе и одному союзнику. Вы можете выбрать, к кому из союзников применить свой результат, после того как все бросили, но сделать это нужно до того, как рассказчик скажет, добились вы успеха или потерпели неудачу.
-СЛАВНАЯ ЦЕЛЬ. Когда вы соглашаетесь выполнить задание, соответствующее принципам вашего архетипа герольда, вы получаете владение навыком, который будет иметь решающее значение для выполнения этого задания. Навык выбирает Рассказчик. Если вы уже владеете этим навыком, вместо него вы получаете кубик опыта. Преимущества этого божественного урока не меняются до тех пор, пока квест не будет завершен.
+
+**ЭКЗЕМПЛЯР.** Вы получаете бонус 1к4 при проверках на акробатику и атлетику при лазании, прыжках, беге и плавании. Когда ваша группа выполняет групповую проверку акробатики или атлетики, вы можете применить результаты броска к себе и одному союзнику. Вы можете выбрать, к кому из союзников применить свой результат, после того как все бросили, но сделать это нужно до того, как Мастер скажет, добились вы успеха или потерпели неудачу.
+
+**СЛАВНАЯ ЦЕЛЬ.** Когда вы соглашаетесь выполнить задание, соответствующее принципам вашего архетипа герольда, вы получаете владение навыком, который будет иметь решающее значение для выполнения этого задания. Навык выбирает Рассказчик. Если вы уже владеете этим навыком, вместо него вы получаете кубик опыта. Преимущества этого божественного урока не меняются до тех пор, пока квест не будет завершен.
+
 ГЕРАЛЬДИЧЕСКИЙ ЗАКАЗ. Всякий раз, когда вы платите за еду, комнату или мелкие принадлежности (например, обычные боеприпасы), бросайте 1к6. При результате 4 или выше торговец признает вас глашатаем ордена, которого он либо боится, либо уважает, и не возьмет с вас ничего. Если вы настаиваете на оплате, он может предложить вам информацию о людях или местах, которые могут представлять интерес для вашего геральдического ордена.
+
 ЧУДЕСНОЕ ОТКРЫТИЕ. Вы получаете бонус 1к4 при проверке расследования, а ваш пассивный показатель расследования увеличивается на 3. Кроме того, при проверке расследования вы всегда можете использовать свою харизму.
+
 НАТУРАЛИСТ. Выберите один тип местности: арктическая, прибрежная, пустынная, лесная, луговая, горная, подземная или болотная. Вы получаете бонус 1к4 при проверках на природу и выживание, сделанных в этой местности. Кроме того, раз в неделю, когда у вас закончились припасы, вы можете провести 8 часов в дикой местности, чтобы найти 1d4+2 припасов.
+
 ПРОРОЧЕСКАЯ ЗАЩИТА. Всякий раз, когда на вас срабатывает ловушка, рассказчик делает тайную проверку Харизмы (Восприятия) против КС, чтобы обнаружить ловушку. В случае успеха вы не обнаруживаете ловушку, но чувствуете, что дальнейшее движение подвергнет вас опасности.
+
 ИСКАТЬ ИСТИНУ. Вы получаете бонус 1к4 при проверке на проницательность, чтобы разглядеть истину. Кроме того, после успешной проверки на Проницательность против проверки на Обман существа вы получаете преимущество при проверке на Проницательность против него в течение 24 часов.
+
 ИМПОРТ ЧУВСТВ. Ваше Божественное чутье распространяется на обнаружение, когда вы попадаете в место, которое имеет или когда-то имело большое святое или несвятое значение, и вы узнаете основную информацию о том, почему или для кого оно было важным. Кроме того, у вас есть преимущество при проверках, направленных на получение дополнительной информации об этом месте, пока вы там находитесь.
+
 ПОСЕРЕБРЕННЫЙ ЯЗЫК. Вы получаете преимущество на одну кость при проверках на запугивание и убеждение. Кроме того, когда вы успешно запугиваете или убеждаете существо, у вас есть преимущество при проверках на запугивание и убеждение, проводимых против него в течение следующих 24 часов.
+
 НЕИЗВЕСТНОЕ. Исследуя место, в котором вы никогда раньше не были, вы можете использовать свою реакцию, чтобы получить преимущество при проверке характеристик и бросках атаки до конца следующего хода. Вы можете сделать это несколько раз, равных вашему модификатору мудрости, и восстановить потраченные силы после завершения длинного отдыха.
 
 ## Плут
@@ -267,22 +281,27 @@ tags:
 
 ## Чародей
 
-ПРИТЯГИВАТЬ ПИЩУ
-Вы можете потреблять то, что большинство людей не считают пропитанием, хотя это вряд ли приятно. Вы можете потратить 3 очка колдовства, чтобы съесть фунт практически любой органики - коры, травы, плоти кактуса, костей - всего, что попадется под руку, - и пока вы можете ощущать вкус, это будет считаться 1 едой, пока ваше тело трансмутирует ее в нечто более съедобное. Ядовитое вещество, употребленное таким образом, все равно остается ядом.
-ГОРЯЧИЙ ВОЗДУХ
-Источник вашей магии обладает странной плавучестью. Когда у вас остаются очки колдовства, ваш вес уменьшается вдвое, и вы получаете половину урона от падения. Кроме того, если вы несете меньше четверти своего максимального снаряжения, вы плаваете на воде.
-ПРОТЯЖНОЕ ПРИКОСНОВЕНИЕ
-Когда вы встречаете осколок существа (например, локон волос, окровавленную повязку, чешую или зуб), вы можете прикоснуться к этому предмету и мгновенно настроиться на него, как на магический предмет. Если вы несете предмет из сарая и настраиваетесь на него, когда видите существо, от которого он произошел, вы сразу же узнаете, что он принадлежит этому существу, и на этом настройка заканчивается. По усмотрению Рассказчика, вы можете узнать дополнительную загадочную информацию, будучи настроенным на такие вещи.
+**ПРИТЯГИВАТЬ ПИЩУ.** Вы можете потреблять то, что большинство людей не считают пропитанием, хотя это вряд ли приятно. Вы можете потратить 3 очка колдовства, чтобы съесть фунт практически любой органики - коры, травы, плоти кактуса, костей - всего, что попадется под руку, - и пока вы можете ощущать вкус, это будет считаться 1 едой, пока ваше тело трансмутирует ее в нечто более съедобное. Ядовитое вещество, употребленное таким образом, все равно остается ядом.
+
+**ГОРЯЧИЙ ВОЗДУХ**. Источник вашей магии обладает странной плавучестью. Когда у вас остаются очки колдовства, ваш вес уменьшается вдвое, и вы получаете половину урона от падения. Кроме того, если вы несете меньше четверти своего максимального снаряжения, вы плаваете на воде.
+
+**ПРОТЯЖНОЕ ПРИКОСНОВЕНИЕ**.Когда вы встречаете осколок существа (например, локон волос, окровавленную повязку, чешую или зуб), вы можете прикоснуться к этому предмету и мгновенно настроиться на него, как на магический предмет. Если вы несете предмет из сарая и настраиваетесь на него, когда видите существо, от которого он произошел, вы сразу же узнаете, что он принадлежит этому существу, и на этом настройка заканчивается. По усмотрению Рассказчика, вы можете узнать дополнительную загадочную информацию, будучи настроенным на такие вещи.
+
 RETRACE
 Проведя 1 минуту в медитации, вы можете поразмышлять о магической ауре, которую оставляете после себя во время путешествия. После этого вы сможете идеально проследить все шаги, проделанные вами за последние 4 часа.
+
 ОХОТНИК НА МАГОВ
 Выслеживая существо, способное произнести хотя бы 1 заклинание, вы можете попытаться сделать это, сосредоточившись на мистической энергии, которую оно оставляет после себя, что позволит вам использовать вашу Харизму при проверке характеристик, сделанных для его выслеживания.
+
 МАГНИТНЫЙ ШАГ
 Вы можете перемещаться по вертикальным поверхностям со скоростью, равной половине вашей скорости, без проверки характеристик. Если вы завершаете свой ход на такой поверхности, вы немедленно падаете, если у вас нет другого способа поддержать себя.
+
 НЕОБЫЧНЫЕ ТРОПЫ
 Во время путешествия вы можете потратить 1 очко колдовства, чтобы затушевать свой след. В течение следующего часа все следы, оставленные вашей группой, становятся случайными, зигзагообразными и непонятными. Существа имеют помеху при проверке на выживание, чтобы выследить вас, и теряются при неудачной проверке.
+
 ЗЛОВЕЩЕЕ ОЗАРЕНИЕ
 Когда вы знаете, вы знаете, вы знаете? Когда вы проваливаете проверку Магии, Истории, Природы или Религии, вы можете попытаться использовать свою магию, чтобы найти ответ, и пересдать проверку. В случае провала попытка затуманивает ваш разум, и вы получаете помеху при проверке интеллекта, пока не закончите короткий отдых. Пока вы страдаете от этой помехи, вы не можете снова использовать Зловещую проницательность.
+
 ЧУВСТВО ВОДЫ
 Во время путешествия, когда вы попадаете в иллюзорную местность или используете магию, чтобы заблудиться, вы всегда замечаете это в течение 1 минуты после воздействия.
 
@@ -290,18 +309,25 @@ RETRACE
 
 ЛУЧШАЯ МЫШЕЛОВКА
 Всегда можно придумать ловушку получше, если хорошенько подумать. Вы можете улучшать рыболовные ловушки, охотничьи силки и охотничьи капканы по мере их установки. Охотничьи ловушки, которые вы улучшаете таким образом, всегда считаются мастерскими. Когда вы достаете улучшенную рыболовную или охотничью ловушку, вы можете добавить к результату к6, определяющий количество пойманной добычи.
+
 АЛХИМИЧЕСКИЙ ВУНДЕРКИНД
 Вы - мастер алхимического искусства, и новые смеси и соки получаются у вас сами собой. Когда вы впервые получаете это полевое открытие, вы получаете две схемы на выбор и добавляете их в свою книгу схем. Эти схемы должны быть для зелий обычной или необычной редкости. Вы получаете владение алхимическими принадлежностями, а если вы уже владеете ими, то вместо этого получаете кубик опыта. Кроме того, у вас есть преимущество при проверках на создание схем для зелий.
+
 ЗОЛОТОЕ ОТНОШЕНИЕ
 Вы проводили точные измерения как природных, так и магических образцов и считаете, что истинное выражение того и другого можно свести к математике. При выборе этого открытия вы можете выбрать два заклинания 1-го уровня из списка заклинаний друидов. Они считаются для вас заклинаниями мастеров, и вы можете добавить их в список заклинаний, которые вы можете подготовить. Если на момент выбора этого полевого открытия вы являетесь мастером не ниже 7-го уровня, вы можете выбрать заклинания 1-го или 2-го уровня из списка заклинаний друидов. Вы можете выбрать это полевое открытие несколько раз, каждый раз выбирая разные заклинания друидов.
+
 СОВРЕМЕННЫЕ УДОБСТВА
 Немного перестроив технологию, можно облегчить всевозможные неудобства. Каждый раз, когда вы начинаете длинный отдых, который повлечет за собой штрафные санкции (например, отдых без тепла в холоде, на неровной скалистой местности или без защиты от вредителей в болотистой местности), вы можете использовать одно из ваших текущих готовых изобретений заклинаний. Если вы это сделаете, то во время этого длинного отдыха не будете испытывать штрафов, связанных с тяжелыми условиями. Вы можете определить точную природу этого перепрофилированного заклинания (например, использовать заклинание горящих рук в качестве обогревателя или заклинание шокирующей хватки в качестве уничтожителя насекомых).
+
 ОРИЕНТИРОВКА
 Всегда нужно иметь при себе магнит и булавку на случай непредвиденных ситуаций в ориентировании. За 1 минуту работы вы сможете собрать самодельный компас. Сделанные таким образом компасы становятся бесполезными уже через час и не имеют никакой ценности для продажи. Вы также умеете изучать окрестности и получаете дополнительный бонус 1к4 при проверке активности "Хронопутешествие". Кроме того, вы получаете владение навыком "Выживание" и его навыком "Поиск пути". Если у вас уже есть этот навык, вместо него вы получаете навык "Выживание" по своему выбору.
+
 РЕИНЖИНИРИНГ ПРИРОДЫ
 Упорядоченный ум может увидеть всевозможные применения в мире природы. Вы можете использовать Инженерию вместо Выживания, когда разбиваете лагерь или выполняете задание "Сбор Компонентов". Кроме того, вы можете использовать материальные компоненты, полученные в ходе задания "Собрать компоненты", для изобретения заклинаний и других возможностей ремесленника, требующих материальных компонентов.
+
 ПОВТОРНОЕ РАЗВИТИЕ
 Даже если бы вас бросили в пустыне без ничего, вы бы быстро восстановили лабораторию. За 1 час работы вы можете создать из дерева и камня ветхие версии любых ремесленных инструментов. Вы получаете штраф -2 к проверкам, сделанным с помощью этих ветхих инструментов, только вы можете использовать их, и они не имеют продажной стоимости, но вы можете использовать их так же, как обычные версии этих инструментов, и они также могут быть использованы как инструменты ремесленника.
+
 МАСТЕР КАНАТОВ И ШКИВОВ
 Множество логистических головоломок можно решить с помощью веревки, шкива и правильного применения интеллекта. Потратив 10 минут на работу с веревкой длиной не менее 300 футов, вы сможете создать следующее с помощью гениального использования веревок и шкивов.
 
@@ -309,11 +335,13 @@ RETRACE
 - Веревочная система, позволяющая существу поднимать предмет весом до 5 × его грузоподъемности прямо вверх на расстояние до 50 футов.
 - Веревочная система, позволяющая существу тащить предмет весом до 5 × его грузоподъемности на расстояние до 50 футов.
 - Ручной веревочный лифт, позволяющий одному существу среднего размера или меньше перемещаться на расстояние до 50 футов прямо вверх и вниз, как если бы это была труднопроходимая местность (для крепления веревок на вершине лифта требуется дерево, стена скалы, потолок или подобная структура).
-  Вы также можете разобрать и восстановить веревку, использованную в любом из этих веревочных творений, потратив 10 минут на ее разборку.
-  СТРАТЕГИЧЕСКИЙ ДЕМОНТАЖ
-  Хотя у вас нет особых способностей к обнаружению ловушек, вы и ваши инструменты определенно можете справиться с ними, как только они будут обнаружены. Вы получаете навык инженера, специализирующегося на механических ловушках. Кроме того, если ловушка срабатывает, когда вы пытаетесь ее обезвредить, вы получаете преимущество при выполнении любых Спасбросков, чтобы избежать ее.
-  ИГРУШКИ ДЛЯ ЖЕСТЯНЩИКОВ
-  Ваше мастерство в области локомоции и зубчатых передач позволяет вам легко внедрять элементы движения в простые устройства. В качестве действия вы можете создать и поместить крошечный движущийся гаджет, называемый игрушкой (например, шагающую куклу, летающий вихрь или игрушечный кораблик), из материалов стоимостью 1 золотой. У этой игрушки КЗ 10, 1 хит и скорость передвижения 10 футов, скорость полета 10 футов или скорость плавания 10 футов на ваш выбор. Когда вы помещаете это устройство, оно начинает двигаться по прямой, пока не будет уничтожено, заблокировано препятствием или вы не используете бонусное действие, чтобы поднять его снова. Сделанные таким образом игрушки весят 2 фунта и могут нести до 1 фунта других устройств или материалов. Создав игрушку таким способом, вы не сможете сделать это снова, пока не закончите короткий отдых, а все созданные вами игрушки распадаются, когда вы создаете новую.
+Вы также можете разобрать и восстановить веревку, использованную в любом из этих веревочных творений, потратив 10 минут на ее разборку.
+
+СТРАТЕГИЧЕСКИЙ ДЕМОНТАЖ
+Хотя у вас нет особых способностей к обнаружению ловушек, вы и ваши инструменты определенно можете справиться с ними, как только они будут обнаружены. Вы получаете навык инженера, специализирующегося на механических ловушках. Кроме того, если ловушка срабатывает, когда вы пытаетесь ее обезвредить, вы получаете преимущество при выполнении любых Спасбросков, чтобы избежать ее.
+
+ИГРУШКИ ДЛЯ ЖЕСТЯНЩИКОВ
+Ваше мастерство в области локомоции и зубчатых передач позволяет вам легко внедрять элементы движения в простые устройства. В качестве действия вы можете создать и поместить крошечный движущийся гаджет, называемый игрушкой (например, шагающую куклу, летающий вихрь или игрушечный кораблик), из материалов стоимостью 1 золотой. У этой игрушки КЗ 10, 1 хит и скорость передвижения 10 футов, скорость полета 10 футов или скорость плавания 10 футов на ваш выбор. Когда вы помещаете это устройство, оно начинает двигаться по прямой, пока не будет уничтожено, заблокировано препятствием или вы не используете бонусное действие, чтобы поднять его снова. Сделанные таким образом игрушки весят 2 фунта и могут нести до 1 фунта других устройств или материалов. Создав игрушку таким способом, вы не сможете сделать это снова, пока не закончите короткий отдых, а все созданные вами игрушки распадаются, когда вы создаете новую.
 
 ## Общие
 
@@ -340,7 +368,7 @@ RETRACE
 СОВМЕСТНАЯ РАБОТА
 Когда вы участвуете в групповой проверке, все участники проверки получают кубик опыта. Если вы используете эту способность, вы не сможете сделать это снова, пока не закончите длинный отдых.
 
-Прочее
+## Прочее
 
 ОСНОВЫ АПТЕКАРСКОГО ДЕЛА
 Каждый раз, когда вы берете короткий или длинный отдых, вы можете использовать свои медицинские знания для лечения одного существа. Это существо может излечиться, как если бы у него была дополнительная 1d4 Кость Хитов во время этого отдыха, или оно может игнорировать один уровень усталости в течение следующих четырех часов.
