--- a/src/content/posts/core-d20/archetypes-index.mdx
+++ b/src/content/posts/core-d20/archetypes-index.mdx
@@ -3,8 +3,7 @@ title: Индекс архетипов Core d20 RPG на сайте
 description: Индекс архетипов Core d20 RPG на сайте
 date: '2014-01-01'
 tags:
-  - архетип
-  - подкласс
+  - Архетип
   - Core d20 RPG
 ---
 
