--- a/src/content/posts/core-d20/backgrounds-index.mdx
+++ b/src/content/posts/core-d20/backgrounds-index.mdx
@@ -3,8 +3,9 @@ title: Предыстории для Core d20 RPG
 description: Предыстории для Core d20 RPG
 date: '2020-01-01'
 tags:
-  - предыстории
+  - D&D 5e
   - Core d20 RPG
+  - Предыстория
 ---
 
 Торговец
