--- a/src/content/posts/core-d20/feats-2.mdx
+++ b/src/content/posts/core-d20/feats-2.mdx
@@ -3,8 +3,9 @@ title: '[Core d20 RPG] Черты, часть 2'
 description: 'Новые черты для персонажей'
 date: '2023-07-15'
 tags:
-  - черты
+  - Черта
   - Core d20 RPG
+  - D&D 5e
 ---
 
 Ранее мы уже писали про черты: в [Предыдущая статья про черты](/posts/core-d20/feats-1) и а [Черты для школ боевых искусств с использованием боевых приемов и техник](/posts/core-d20/martial-traditions).
