--- a/src/content/posts/core-d20/magic-spells-1.mdx
+++ b/src/content/posts/core-d20/magic-spells-1.mdx
@@ -3,10 +3,8 @@ title: '[Core d20 RPG] Магия. Заклинания'
 description: Описания новых заклинаний для D&D
 date: '2023-02-11'
 tags:
-  - 'core-d20-rpg'
-  - 'e5e'
-  - 'magic'
-  - 'spell'
+  - Core d20 RPG
+  - Заклинания
 ---
 
 **Анимированная кровь**
