--- a/src/content/posts/core-d20/feats-1.mdx
+++ b/src/content/posts/core-d20/feats-1.mdx
@@ -3,9 +3,9 @@ title: '[Core d20 RPG] Черты, часть 1'
 description: 'Две черты для Core d20 RPG - Написание свитков и Лучник заклинатель'
 date: '2023-05-15'
 tags:
+  - Черта
   - Core d20 RPG
-  - Homebrew
-  - Черты
+  - D&D 5e
 ---
 
 ## Черты, связанные с сотворением заклинаний
