--- a/src/content/posts/core-d20/changed-rest-mechanics.mdx
+++ b/src/content/posts/core-d20/changed-rest-mechanics.mdx
@@ -4,27 +4,10 @@ description: Модификация правил отдыха для D&D 5e
 date: '2023-09-05'
 tags:
   - Короткий отдых
-  - Длинный отдых
+  - Долгий отдых
   - Средний отдых
   - Продолжительный отдых
-  - Long rest
-  - Short rest
-  - Extended rest
-  - Medium rest
   - Core d20 RPG
----
-
----
-
-title: example
-description: example
-date: "2023-05-17"
-tags:
--example
-author: example
-translator: example
-cover: example
-
 ---
 
 ## ОТДЫХ И ВОССТАНОВЛЕНИЕ ЗДОРОВЬЯ
