--- a/src/content/posts/translations/mike-mearls-monsters-in-5e-not-work.mdx
+++ b/src/content/posts/translations/mike-mearls-monsters-in-5e-not-work.mdx
@@ -9,6 +9,8 @@ tags:
 author: Mike Mearls
 ---
 
+[Оригинал](https://www.patreon.com/posts/5e-monsters-dont-107892435)
+
 Платный опрос, который я проводил несколько недель назад, показал, что математика монстров - главная тема для контента. Но прежде чем говорить о математике, нам нужно поговорить о слоне в комнате. Экономика действий в D&D не работает для монстров.
 
 Экономика действий - действие, бонусное действие, движение, реакция - достаточно хорошо работает для игроков. Она создает четыре варианта с четкой структурой.
