--- a/src/content/posts/articles/about-characters-roles.mdx
+++ b/src/content/posts/articles/about-characters-roles.mdx
@@ -3,16 +3,14 @@ title: Роли персонажей
 description: Вдогонку к двум статьям про роли существ есть небольшая заметка про роли персонажей в бою и мой на них взгляд.
 date: '2023-06-29'
 tags:
-  - Классы
   - Роли
-  - Персонажи
   - Тактика
   - Сражение
 ---
 
 Ранее я писал про роли и шаблоны существ - [Про классы, существа, роли](/posts/articles/about-creatures-roles-classes-2) и [Про классы, существа, роли, шаблоны часть 2](/posts/articles/about-creatures-roles-classes-2), но сейчас пойдет речь про роль персонажей в бою.
 
-Существует несколько подходов к определению роли персонажа в рамках игр с использованием D&D 5ed.
+Существует несколько подходов к определению роли персонажа в рамках игр с использованием D&D 5e.
 
 Первый из них предполагает определение роли исходя из наиболее эффективных действий персонажа в бою. Чаще всего в его рамках выделяют:
 
