--- a/src/content/posts/articles/about-system-of-dnd-5e.mdx
+++ b/src/content/posts/articles/about-system-of-dnd-5e.mdx
@@ -72,7 +72,7 @@ tags:
 Практически все заклинания контроля позволяют существу под воздействием перебрасывать спасбросок в конце хода. Но не Гипнотический узор. Хотя разработчики посвятили не одну статью описанию изменений заклинаний контроля и что переброс спасброска в конце хода существа важен. Но вот в Гипнотическом узоре забыли. Бывает, чо.
 
 ## Подкласс Кавалерист и черта Страж, Хексблейд и мультиклассы из паладина, чародея или барда, мультикласс в клерика Войны или Жизни
-Одна из особенностей подкласса Кавалерист практически дублирует один из эффектов черты Страж. Если бы подкласс разрабатывался с учетом наличия черт – этой проблемы не возникло. Почему это плохо? Потому что черта это универсальный "кубик" создания персонажа и подкласс не должен использовать особенности черт в своих особенностях либо учитывать возможность дублирования (как это происходит при получении уже умеющихся навыков)
+Одна из особенностей подкласса Кавалерист практически дублирует один из эффектов черты Страж. Если бы подкласс разрабатывался с учетом наличия черт – этой проблемы не возникло. Почему это плохо? Потому что черта это универсальный "кубик" создания персонажа и подкласс не должен использовать особенности черт в своих особенностях либо учитывать возможность дублирования (как это происходит при получении уже имеющихся навыков)
 
 Второй пример разработки без учета существующих уже элементов – это особенности подкласса колдуна Хексблейд, которые делают мультиклассирование в него из паладина, барда (в большей степени) и чародея (в меньшей) – очень эффективными - и что стало бедой в рамках той же Лиги Авантюристов.
 
